--- a/authenticate-me/frontend/package.json
+++ b/authenticate-me/frontend/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2"
   },
